added col/row divs, styling added to html doc

--- a/assets/style.css
+++ b/assets/style.css
@@ -9,24 +9,32 @@ textarea {
   border: none;
   resize: none;
   color: #000000;
-  border-left: 1px solid black;
+  border: 1px solid rgb(95, 95, 95);
   padding: 10px;
+}
+
+textarea:hover{
+  border: 2px solid rgb(95, 95, 95);
+}
+
+textarea:active{
+  border: 2px solid rgb(95, 95, 95);
 }
 
 .jumbotron {
   text-align: center;
-  background-color: transparent;
-  color: black;
+  background-color: #06aed5;
+  color: white;
   border-radius: 0;
-  border-bottom: 10px solid black;
+  border-bottom: 10px solid yellow;
 }
 
-.description {
+.userInput {
   white-space: pre-wrap;
 }
 
 .time-block {
-  text-align: center;
+  align-content: center;
   border-radius: 15px;
 }
 
@@ -37,9 +45,10 @@ textarea {
 }
 
 .hour {
-  background-color: #ffffff;
-  color: #000000;
-  border-top: 1px dashed #000000;
+  background-color: #06aed5;
+  color: white;
+  margin-right: 3px;
+  text-align: center;
 }
 
 .past {
@@ -57,15 +66,26 @@ textarea {
   color: white;
 }
 
-.saveBtn {
-  border-left: 1px solid black;
+#saveBtn {
+  border: 1px solid rgb(95, 95, 95);
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
   background-color: #06aed5;
   color: white;
+  height: 78px;
+  width: 65px;
 }
 
-.saveBtn i:hover {
+#saveBtn:hover {
+  background-color: #3ec0ddee;
   font-size: 20px;
   transition: all 0.3s ease-in-out;
+  border: 2px solid yellow;
+}
+
+#jumbotron2 {
+  background-color: #06aed5;
+  border-radius: 0;
+  border-top: 10px solid yellow;
+  margin-top: 12px;
 }
