--- a/assets/style.css
+++ b/assets/style.css
@@ -35,10 +35,10 @@ textarea:active{
 
 .userInput {
   white-space: pre-wrap;
+  color: #000000;
 }
 
 .time-block {
-  align-content: center;
   border-radius: 15px;
 }
 
@@ -55,20 +55,23 @@ textarea:active{
   text-align: center;
   margin-bottom: 5px;
   border: 1px solid yellow;
+  height: auto;
+  align-items: center;
+  display: flex;
 }
 
 .past {
-  background-color: #d3d3d3;
+  border: 2px solid #ff7b00;
   color: white;
 }
 
 .present {
-  background-color: #ff6961;
+  border:2px solid #555555;
   color: white;
 }
 
 .future {
-  background-color: #77dd77;
+  border:2px solid #00f700;
   color: white;
 }
 
@@ -78,10 +81,10 @@ textarea:active{
   border-bottom-right-radius: 15px;
   background-color: #06aed5;
   color: white;
-  height: 68px;
-  width: 65px;
-  position: relative;
-  bottom: 2px;
+  height: 70px;
+  width: 75px;
+  
+ 
 }
 
 #saveBtn:hover {
@@ -90,6 +93,7 @@ textarea:active{
   transition: all 0.3s ease-in-out;
   border: 2px solid yellow;
 }
+
 
 #jumbotron2 {
   background-color: #06aed5;
